# rust-ml

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.claude/: instructions.md
.githooks/: pre-commit
.github/workflows/: ci.yml
browser-tests/: gpu-crash.spec.js  navigation.spec.js  package-lock.json  package.json  playwright.config.js
common/: Cargo.toml
libs/common/src/: digit.rs  lib.rs
libs/neural/: Cargo.toml
libs/neural/src/: gpu_buffers.rs  gpu_network.rs  lib.rs  mnist.rs
libs/neural/src/gpu/: mod.rs
libs/neural/src/gpu/shaders/: add_bias.wgsl  hadamard.wgsl  matmul.wgsl  matmul_a_bt.wgsl  matmul_at_b.wgsl  output_delta.wgsl  relu.wgsl  relu_backward.wgsl  saxpy.wgsl  scale_buffer.wgsl  softmax.wgsl  zero_buffer.wgsl
libs/tokenizer/: Cargo.toml
libs/tokenizer/src/: bpe.rs  lib.rs  vocab.rs
libs/transformer/: BENCHMARKING.md  Cargo.toml
libs/transformer/benches/: training_quality.rs  transformer_bench.rs
libs/transformer/src/: attention.rs  block.rs  checkpoint.rs  config.rs  embedding.rs  eval.rs  feed_forward.rs  grad_check.rs  layer_norm.rs  lib.rs  model.rs  optimizer.rs  training.rs
libs/transformer/src/gpu/: forward.rs  mod.rs  ops.rs
libs/transformer/src/gpu/shaders/: add.wgsl  attention_qk.wgsl  attention_v.wgsl  embedding.wgsl  gelu.wgsl  layer_norm.wgsl  matmul.wgsl  softmax_rows.wgsl
libs/transformer/tests/: completion_eval.rs  eval_benchmark.rs  integration.rs  quick_eval.rs
libs/wiki-fetch/: Cargo.toml
libs/wiki-fetch/src/: cleaner.rs  lib.rs
lm-viz/: Cargo.toml
lm-viz/src/: completion.rs  lib.rs  metrics.rs  tests.rs  viz.rs
neural-viz/: Cargo.toml
neural-viz/src/: gpu_training_tests.rs  lib.rs  viz.rs
neural-viz/www/: index.html
numbers-browser/: Cargo.toml
numbers-browser/src/: browser.rs  lib.rs
perceptron/: Cargo.toml
perceptron/src/: commands.rs  main.rs  neuron.rs  print_numbers.rs
wasm-serve/: Cargo.toml  README.md
wasm-serve/src/: main.rs
