[package]
name = "neural-viz"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
gpu = ["neural/gpu", "wgpu", "wasm-bindgen-futures"]

[dependencies]
neural = { path = "../libs/neural" }
common = { path = "../libs/common" }
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Window",
    "Node",
    "MouseEvent",
    "WheelEvent",
    "HtmlButtonElement",
    "Navigator",
    "console",
]}
js-sys = "0.3"
# GPU dependencies (optional)
wgpu = { version = "23", optional = true, features = ["webgpu"] }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
pollster = "0.4"
