[package]
name = "neural"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
common = { path = "../common" }

# GPU dependencies (always included)
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
futures-channel = "0.3"

# WASM logging (enabled for wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
