[package]
name = "transformer"
version = "0.1.0"
edition = "2024"

[dependencies]
neural = { path = "../neural" }
tokenizer = { path = "../tokenizer" }
rand = "0.9"
bytemuck = { version = "1.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "24"
pollster = "0.4"

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "transformer_bench"
harness = false

[[bench]]
name = "training_quality"
harness = false
